# do-list

./: .gitignore  .hgtags  LICENSE  README.md  changelog.md  check.sh  do-list.cabal  publish.sh  stack.yaml
bench/: Bench.hs
examples/: Bench.hs  Indentation.hs  Text.hs  do-list-examples.cabal
src/Data/: DoList.hs  DoMonoid.hs
test/: Test.hs
