name:               do-list
version:            0.9.0
synopsis:           List construction with monadic syntax
description:        Please see README.md
homepage:           https://github.com/tserduke/do-list
bug-reports:        https://github.com/tserduke/do-list/issues
license:            BSD3
license-file:       LICENSE
author:             Taras Serduke
maintainer:         taras.serduke@gmail.com
copyright:          2016 Taras Serduke
category:           Data, List, Monads
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Data.DoList
  build-depends:    base, dlist
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tserduke/do-list
