name:               do-list
version:            0.9.0
synopsis:           List construction with monadic syntax
description:        Please see README.md
homepage:           https://github.com/tserduke/do-list
bug-reports:        https://github.com/tserduke/do-list/issues
license:            BSD3
license-file:       LICENSE
author:             Taras Serduke
maintainer:         taras.serduke@gmail.com
copyright:          2016 Taras Serduke
category:           Data, List, Monads
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Data.DoList
  build-depends:    base, dlist
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    base,
                    do-list,
                    hspec
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/tserduke/do-list
