name:               do-list-examples
version:            0.2.0
build-type:         Simple
cabal-version:      >= 1.10

executable do-list-example-bench
  hs-source-dirs:   .
  main-is:          Bench.hs
  build-depends:    base < 5, criterion, do-list
  default-language: Haskell2010
  ghc-options:      -Wall
