name:               do-list-examples
version:            0.3.0
build-type:         Simple
cabal-version:      >= 1.10

executable do-list-example-bench
  hs-source-dirs:   .
  main-is:          Bench.hs
  build-depends:    base, criterion, do-list
  default-language: Haskell2010
  ghc-options:      -Wall

executable do-list-example-text
  hs-source-dirs:   .
  main-is:          Text.hs
  build-depends:    base, do-list, text
  default-language: Haskell2010
  ghc-options:      -Wall

executable do-list-example-indentation
  hs-source-dirs:   .
  main-is:          Indentation.hs
  build-depends:    base, do-list, text
  default-language: Haskell2010
  ghc-options:      -Wall
